added homepage handlebars no styling yet

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,18 +1,20 @@
 <div class="homepage">
     <h1 class="welcome">🍲Welcome to {{User.name}} Meal Planner</h1>
 
-        <p>
-            Short on time? Tired of seeing your food go to waste? Want to save some money and keep track of what you have on hand? <br>
-            Well this application should do the trick for you. You can plan your meals ahead of time, see what you have and only buy what you acutally need.
-        </p>
+    <p>
+        Short on time? Tired of seeing your food go to waste? Want to save some money and keep track of what you have on
+        hand? <br>
+        Well this application should do the trick for you. You can plan your meals ahead of time, see what you have and
+        only buy what you acutally need.
+    </p>
     <div>
-    <h2 class="menuOptions">What would you like to do?</h2>
+        <h3 class="menuOptions">What would you like to do?</h3>
 
-    <ul>
-        <li><a href="/meals">🍽️ Plan my meals</a></li>
-        <li><a href="/cupboard">See what I already have</a></li>
-        <li><a href="/shoppingList">🛍️ See my shopping list</a></li>
-    </ul>
+        <ul>
+            <li ><a href="/meals">🍽️ Plan my meals</a></li>
+            <li><a href="/cupboard">See what I already have</a></li>
+            <li><a href="/shoppingList">🛍️ See my shopping list</a></li>
+        </ul>
     </div>
-    
+
 </div>
