added homepage handlebars no styling yet

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -11,7 +11,7 @@
         <h3 class="menuOptions">What would you like to do?</h3>
 
         <ul>
-            <li ><a href="/meals">🍽️ Plan my meals</a></li>
+            <li ><a href="/planingMeals">🍽️ Plan my meals</a></li>
             <li><a href="/cupboard">See what I already have</a></li>
             <li><a href="/shoppingList">🛍️ See my shopping list</a></li>
         </ul>
