Homepage Looks good, change button name in main

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
     <nav>
       <a class="btn" id="HomePage" style="color:white;" href="/">Home Page</a>
    {{!-- {{#if logged_in}} --}}
-      <a class="btn" id="MyDashboard" style="color:white;" href="/dashboard">MyDashboard</a>
+      <a class="btn" id="MyDashboard" style="color:white;" href="/cupboard">MyCupboard</a>
       <button class="btn" id="logout" style="color:white;" href="/logout">LogOut</button>
     {{!-- {{else}} --}}
       <a class="btn" id="login" style="color:white;"  href="/login">LogIn/SignUp</a>
