--- a/views/partials/refrig-details.handlebars
+++ b/views/partials/refrig-details.handlebars
@@ -1,1 +1,1 @@
-<h6>Refrigerated Item: {{Refrig.name}} <span></span Quantity: {{Refrig.quantity}} <span></span></h6>
+<h6>Refrigerated Item: {{Refrig.name}} <span> Quantity: {{Refrig.quantity}}  </span> </h6>
