--- a/views/partials/drygood-details.handlebars
+++ b/views/partials/drygood-details.handlebars
@@ -1,1 +1,1 @@
-<h6>Drygood Item: {{Drygood.name}} <span></span>{{Drygood.quantity}} <span></span></h6>
+<h6>Drygood Item: {{Drygood.name}} <span></span>Quantity : {{Drygood.quantity}} <span></span></h6>
