--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,15 @@
   <title>Meal Planner</title>
   {{!-- May have to change href here --}}
   <link rel="stylesheet" href="/public/css/jass.css">
+  <style>table {
+  border-collapse: collapse;
+}
+
+td, th {
+  border: 1px solid #999;
+  padding: 0.5rem;
+  text-align: left;
+}</style>
 </head>
 
 <body>
