--- a/views/partials/drygood-details.handlebars
+++ b/views/partials/drygood-details.handlebars
@@ -1,1 +1,5 @@
-<h6>Drygood Item: {{Drygood.name}} <span></span>Quantity : {{Drygood.quantity}} <span></span></h6>
+<tr>
+    <td>{{Drygood.name}}</td>
+    <td>{{Drygood.quantity}}</td>
+    <td>{{Drygood.UOM}}</td>
+</tr>
