--- a/views/partials/refrig-details.handlebars
+++ b/views/partials/refrig-details.handlebars
@@ -1,1 +1,5 @@
-<h6>Refrigerated Item: {{Refrig.name}} <span> Quantity: {{Refrig.quantity}}  </span> </h6>
+<tr>
+    <td>{{Refrig.name}}</td>
+    <td>{{Refrig.quantity}}</td>
+    <td>{{Refrig.UOM}}</td>
+</tr>
