--- a/views/planningMeals.handlebars
+++ b/views/planningMeals.handlebars
@@ -6,19 +6,19 @@
 
         {{!-- radio button to choose which day user wants to add the meal  --}}
         <label class="Day">What day will this meal be eaten?</label><br>
-        <input type="radio">
+        <input type="radio" id="monday">
         <label for="monday">Monday</label><br>
-        <input type="radio">
+        <input type="radio" id="tuesday">
         <label for="tuesday">Tuesday</label><br>
-        <input type="radio">
+        <input type="radio" id="wednesday">
         <label for="wednesday">Wednesday</label><br>
-        <input type="radio">
+        <input type="radio" id="thursday">
         <label for="thursday">Thursday</label><br>
-        <input type="radio">
+        <input type="radio" id="friday">
         <label for="friday">Friday</label><br>
-        <input type="radio">
+        <input type="radio" id="saturday">
         <label for="saturday">Saturday</label><br>
-        <input type="radio">
+        <input type="radio" id="sunday">
         <label for="sunday">Sunday</label><br>
 
         <label class="mealName">What do you want for dinner?</label><br>
