--- a/views/meals.handlebars
+++ b/views/meals.handlebars
@@ -1,16 +1,16 @@
-{{#each placeholders as |placeholder|}}
+{{#each meals as |meal|}}
 <div class="meal-card">
   <div class="meal-card-header">
-    {{placeholder.name}}
+    {{meal.name}}
   </div>
   <div class="card-body">
     <p>
       Instructions:
-      {{placeholder.instructions}}
+      {{meal.instructions}}
     </p>
     <p>
       Meal created by:
-      {{placeholder.user_id}}
+      {{meal.user_id}}
     </p>
   </div>
 </div>
