--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meal Planner</title>
   {{!-- May have to change href here --}}
-  <link rel="stylesheet" href="/public/css/jass.css">
+  <link rel="stylesheet" href="/css/jass.css">
   <style>table {
   border-collapse: collapse;
 }
@@ -43,7 +43,7 @@ td, th {
 
   <!-- Only include the logout script if the user is logged in -->
   {{!-- {{#if logged_in}} --}}
-  <script src="/js/logout.js"></script>
+  <script src="/js/render.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" 
           integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   {{!-- {{/if}} --}}
