Reworked meal planning to support multiple users.

--- a/views/cupboard.handlebars
+++ b/views/cupboard.handlebars
@@ -50,4 +50,5 @@
       </tr>
       <input id="subCup" name='subCup' type="button" value="Submit" >
   </div>
+  <script src="/js/render.js"></script>
 </section>
