--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,20 +1,11 @@
 <div class="homepage">
-    <h1 class="welcome">🍲Welcome to {{User.name}} Meal Planner</h1>
+    <h1 class="welcome">🍲Welcome to your Meal Planner</h1>
 
     <p>
-        Short on time? Tired of seeing your food go to waste? Want to save some money and keep track of what you have on
+        Are you short on time? Tired of seeing your food go to waste? Want to save some money and keep track of what you have on
         hand? <br>
         Well this application should do the trick for you. You can plan your meals ahead of time, see what you have and
-        only buy what you acutally need.
+        only buy what you actually need.
     </p>
-    <div>
-        <h3 class="menuOptions">What would you like to do?</h3>
-
-        <ul>
-            <li ><a href="/meals">🍽️ Plan my meals</a></li>
-            <li><a href="/cupboard">See what I already have</a></li>
-            <li><a href="/shoppingList">🛍️ See my shopping list</a></li>
-        </ul>
-    </div>
 
 </div>
