--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,6 +14,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Asap+Condensed&family=Rajdhani:wght@500&display=swap" rel="stylesheet">
 
   <script src="https://kit.fontawesome.com/604581e78a.js" crossorigin="anonymous"></script>
 
@@ -85,7 +88,7 @@ td, th {
         </ul>
     </nav>
 
-  <header class="display-flex justify-space-around align-center p-2" style= "background-color: black;">
+  <header class="display-flex justify-space-around align-center p-2" style= "background-color: rgb(73, 73, 73);">
    
     <h1 class="" style="color: white;">Meal Planner</h1>
 
@@ -101,11 +104,7 @@ td, th {
 
   <!-- Only include the logout script if the user is logged in -->
   {{!-- {{#if logged_in}} --}}
-<<<<<<< HEAD
   <script src="/js/render.js"></script>
-=======
-  {{!-- <script src="/js/logout.js"></script> --}}
->>>>>>> 877c80a3a6547a5728282f8e8445724e6197409e
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" 
           integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   {{!-- {{/if}} --}}
