--- a/views/meals.handlebars
+++ b/views/meals.handlebars
@@ -1,3 +1,6 @@
+<div id="current-meals">
+  <h1>Current Meals</h1>
+  </div>
 {{#each meals as |meal|}}
 <div class="meal-card">
   <a href="/meals/{{meal.id}}">
@@ -17,7 +20,7 @@
 
 <form class = "meal-form">
   <div>
-  <p>Create a new meal</p>
+  <h1 class="meal-head">Create a new meal</h1>
   <label class="mealName">Name of meal</label><br>
   <input type="text" id="mealName">
 
