Fixed some file pathing issues and removed the true flag from force

--- a/views/cupboard.handlebars
+++ b/views/cupboard.handlebars
@@ -51,3 +51,5 @@
       <input id="subCup" name='subCup' type="button" value="Submit" >
   </div>
 </section>
+
+<script src="/js/render.js"></script>
