added some styling changes to mealview

--- a/views/meals.handlebars
+++ b/views/meals.handlebars
@@ -1,5 +1,6 @@
-<div id="current-meals">
-  <h1>Current Meals</h1>
+<div>
+  <body><h1 class="meal-head">Current Meals</h1></body>
+  
   </div>
 {{#each meals as |meal|}}
 <div class="meal-card">
@@ -18,7 +19,7 @@
 {{/each}}
 
 
-<form class = "meal-form">
+<form class="meal-form">
   <div>
   <h1 class="meal-head">Create a new meal</h1>
   <label class="mealName">Name of meal</label><br>
