--- a/public/css/style.css
+++ b/public/css/style.css
@@ -172,7 +172,7 @@ main {
 .planningView h3,
 .subtitle,
 .planMealView, 
-.meal-head{
+{
     font-weight: bold;
     font-family: 'Rajdhani', sans-serif;
     font-size: 20px;
@@ -257,13 +257,21 @@ main {
     }
 
 /*List of current meals and Create Meal View*/
+.meal-head,
+{
+    font-weight: bold;
+    font-family: 'Rajdhani', sans-serif;
+    font-size: 20px;
 
-.meal-head{
-    text-align: center;
 };
-#current-meals{
-    font-size:40px;
-}
+
+.meal-card,
+.meal-form {
+    border-radius: 20px;
+    border-color: rgba(253, 124, 4, 0.507);
+    border-style: solid;
+    padding: 30px;
+    border-width: 10px;}
 
 
     /* login */
