Added some styling changes to handlebars to make whole page cohesive

--- a/views/cupboard.handlebars
+++ b/views/cupboard.handlebars
@@ -28,7 +28,7 @@
       </table>
     </div>
   </div>
-  <div style="margin: 2em; width:40%">
+  <div class="cupboarditems" style="margin: 2em; width:40%">
     <h2>Input Cupboard Items</h2>
     <table>
       <tr>
