--- a/views/meals.handlebars
+++ b/views/meals.handlebars
@@ -20,16 +20,15 @@
 
 
 <form class="meal-form">
-  <div>
+  <div class="meal-card">
   <h1 class="meal-head">Create a new meal</h1>
-  <label class="mealName">Name of meal</label><br>
-  <input type="text" id="mealName">
+  <br><br>
+  <input placeholder="Name of Meal"type="text" id="mealName">
 
-  <label class="instructions">Instructions</label><br>
-  <input type="text" id="instructions">
+  <input placeholder="Instructions" type="text" id="instructions">
 
   <br>
-  <button id="submit" class="submit">Submit</button>
+  <button id="submit submitbtn" class="submit submitbtn">Submit</button>
   </div>
 </form>
 
