--- a/public/css/style.css
+++ b/public/css/style.css
@@ -172,8 +172,7 @@ main {
 
 .planningView h3,
 .subtitle,
-.planMealView, 
-{
+.planMealView {
     font-weight: bold;
     font-family: 'Rajdhani', sans-serif;
     font-size: 20px;
@@ -205,7 +204,9 @@ main {
     font-family: 'Rajdhani', sans-serif;
 }
 
-
+.Instructions {
+    text-decoration: none;
+}
 /* media query */
 
 @media screen and (max-width: 700px) {
@@ -233,8 +234,7 @@ main {
         font-family: 'Asap Condensed', sans-serif;
         padding: 15px;
     }
-    .planningView,
-         {
+    .planningView {
         border-radius: 20px;
         border-color: rgba(253, 195, 4, 0.575);
         border-style: solid;
@@ -258,8 +258,7 @@ main {
     }
 
 /*List of current meals and Create Meal View*/
-.meal-head,
-{
+.meal-head {
     font-weight: bold;
     font-family: 'Rajdhani', sans-serif;
     font-size: 20px;
