--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,15 +32,6 @@ main {
     padding: 1rem;
 }
 
-.navbar {
-    width: 5rem;
-    height: 100vh;
-    position: fixed;
-    background-color: var(--bg-primary);
-    transition: width 600ms ease;
-    /* overflow: scroll; */
-}
-
 .navbar-nav {
     list-style: none;
     padding: 0;
@@ -114,14 +105,6 @@ main {
     position: absolute;
     left: -999px;
     transition: var(--transition-speed);
-}
-
-.navbar:hover {
-    width: 16rem;
-}
-
-.navbar:hover .link-text {
-    display: block;
 }
 
 .navbar:hover .logo svg {
@@ -209,6 +192,24 @@ main {
 }
 /* media query */
 
+@media screen and (min-width: 701px) {
+    .navbar:hover .link-text {
+        display: block;
+    }
+
+    .navbar {
+        width: 5rem;
+        height: 100vh;
+        position: fixed;
+        background-color: var(--bg-primary);
+        transition: width 600ms ease;
+    }
+
+    .navbar:hover {
+        width: 16rem;
+    }
+}
+
 @media screen and (max-width: 700px) {
     /* homepage */
     .homepage {
@@ -255,6 +256,33 @@ main {
         padding: 0px 15px 15px 15px;
         font-size: 10px;
         font-family: 'Asap Condensed', sans-serif;
+    }
+
+    .navbar {
+        width: 100vw;
+        height: 5rem;
+        position: fixed;
+        bottom: 0;
+        background-color: var(--bg-primary);
+    }
+
+    .navbar-nav {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+    }
+
+    .nav-link {
+        justify-content: center;
+    }
+
+    main {
+        margin: 0;
     }
 
 /*List of current meals and Create Meal View*/
