Finally added delete button to meals.

--- a/views/meals.handlebars
+++ b/views/meals.handlebars
@@ -20,15 +20,29 @@
 {{#each meals as |meal|}}
 <a href="/meals/{{meal.id}}">
   <div class="meal-card">
-      <div class="meal-card-header mb-2">
-        <h3 class="is-size-3">{{meal.name}}</h3>
+
+    <div class="is-flex is-justify-content-space-between">
+
+      <div>
+
+        <div class="meal-card-header mb-2">
+          <h3 class="is-size-3">{{meal.name}}</h3>
+        </div>
+
+        <div class="card-body">
+          <p class="is-size-5 Instructions">
+            Instructions: {{meal.instructions}}
+          </p>
+        </div>
+
       </div>
-    <div class="card-body">
-      <p class="is-size-5 Instructions">
-        Instructions:
-        {{meal.instructions}}
-      </p>
+
+      <div>
+        <button class="btn btn-primary meal-delete" data-id="{{meal.id}}"> <i class="fas fa-trash-alt fa-3x" data-id="{{meal.id}}"></i> </button>
+      </div>
+
     </div>
+
   </div>
 </a>
 {{/each}}
